<resources>
    <string name="app_name">Shopping list</string>
    <string name="title">Easy shopping list manager</string>
    <string name="delete_all">Delete all</string>
    <string name="confirmation">Confirmation</string>
    <string name="settings">Settings</string>
    <string name="item">Item</string>
    <string name="qty">Amount</string>
    <string name="remove">Remove selected</string>
    <string name="enter_name">Enter your name</string>
    <string name="settings_name">Your name</string>
    <string name="add_to_list">Add to list</string>
    <string name="areYouSure">Do you really want to delete all items on this list?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="share">Share</string>
</resources>
