<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="org.projects.shoppinglist.MainActivity">
    <item
        android:id="@+id/clearButton"
        android:orderInCategory="100"
        android:icon="@drawable/delete_all_icon"
        android:title="@string/delete_all"
        app:showAsAction="always"/>
    <item
        android:id="@+id/shareButton"
        android:orderInCategory="110"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="always"/>
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never"/>
</menu>
